make some variable static make some methods-predicate.Replace everywhere toList method